cloud-core/kubernetes/experiments/network/ingress/v1.11/auth/external/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://httpbin.org/basic-auth/user/passwd"
  name: external-auth
spec:
  rules:
  - host: external-auth.example.com
    http:
      paths:
      - backend:
          serviceName: echoheaders
          servicePort: 80
        path: /
